--- a/ServiExpress/templates/index.html
+++ b/ServiExpress/templates/index.html
@@ -12,10 +12,8 @@
     <!--Boostrap Carrusel-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--Boostrap Footer-->
 </head>
 
 
@@ -33,13 +31,13 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{% static 'images/neumaticos.png'%}" alt="Los Angeles" width="1100" height="500">
+                <img src="{% static 'images/neumaticos.png'%}" alt="neumaticos" width="825" height="375">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/motorAuto.png'%}" alt="Chicago" width="1100" height="500">  
+                <img src="{% static 'images/motorAuto.png'%}" alt="motor" width="825" height="375">  
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/pinturaAuto.png'%}" alt="New York" width="1100" height="500">  
+                <img src="{% static 'images/pinturaAuto.png'%}" alt="pintura" width="825" height="375">  
             </div>
         </div>
     </div>
@@ -53,32 +51,66 @@
         </ul>
     </nav>
 
-    <article style="border: solid red;height: 300px;">
-        <div>
-            gfdgfdgfd
-        </div>
-
+    <article>
+        <section>
+            <div class="card-deck bg-dark text-white">
+                <div class="card">
+                    <img src="{% static 'images/pintura.png'%}" class="card-img" alt="..." height="715">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Pinturas</h5>
+                        <p>Trabajamos con la marca holandesa de pinturas Sikkens, y fuimos el primer taller en Chile en ser certificado en los procesos de repintado automotriz exigidos por ésta empresa.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{% static 'images/taller.png'%}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Taller</h5>
+                        <p>Ofrecemos servicios integrales de mantenimiento, diagnóstico y reparación para vehículos de alta gama de acuerdo a las pautas de mantenimiento de los fabricantes.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{% static 'images/repuestos.png'%}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Repuestos</h5>
+                        <p style="color: black;font-weight: 600;">tenemos la mayor cantidad de repuestos y accesorios para el cuidado y mantencion de tu vehiculo, siempre al precio mas conveniente</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </article>
 
-    <footer>
-        <div>
-            <h4>NUESTRA EMPRESA</h4>
-            <ul>
-                <li>NUESTRA EMPRESA</li>
-                <li>UNETE A SERVIEXPRESS</li>
-                <li>FORMULRIO DE CONTACTO</li>
-            </ul>
+    <footer class="footer">
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
         </div>
-        <div>
-            <strong>LLAMANOS</strong>
-            <p>Central :<a href="">+56 9 8234 5123</a></p>
-            <P>Servicio Tecnico : <a href="">+56 9 7324 1234</a></P>
-        </div>
-        <div class="mb-4">
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-        </div>
-    </footer>
+        <ul class="social-icon">
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a></li>
+        </ul>
+        <ul class="menu">
+          <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+    
+        </ul>
+        <p>&copy;2022 ServiExpress | All Rights Reserved</p>
+      </footer>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
