--- a/ServiExpress/templates/index.html
+++ b/ServiExpress/templates/index.html
@@ -44,10 +44,10 @@
 
     <nav class="navMenu">
         <ul id="barra">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sucursales</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Productos</a></li>
+            <li><a href="../">Inicio</a></li>
+            <li><a href="formulario">Cotización</a></li>
+            <li><a href="servicio">Servicios</a></li>
+            <li><a href="productos">Productos</a></li>
         </ul>
     </nav>
 
