--- a/ServiExpress/static/css/estilos.css
+++ b/ServiExpress/static/css/estilos.css
@@ -15,47 +15,17 @@ header{
     
 }
 body{
-    background-image: linear-gradient(120deg, #f1f1f1 0%, #6bb36f 100%);
+    background-image: linear-gradient(120deg, #9c9c9c 0%, #9b9b9b 100%);
     
     width: 100%;
 }
-/*Galería*/
-.container-img{
-    background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
-    width: 100%;
-    max-width: 1100px;
-    margin: auto;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 250px;
-    grid-gap: 20px;
-}
-.container-img .box-img figure{
-    width: 100%;
-    height: 100%;
-}
 
-.container-img .box-img img{
-    width: 100%;
-    height: 100%;
-    object-fit:  cover;
-}
-
-.container-img .box-img:nth-child(1){
-    grid-column-start: span 2;
-}
-
-.container-img .box-img:nth-child(4){
-    grid-row-start: span 2;
-}
 
 
 /*Formulario*/
 .formulario{
     width: 400px;
-    background-color: aqua;
+    background-color: rgb(81, 89, 190);
     padding: 30px;
     margin: auto;
     margin-top: 100px;
@@ -94,12 +64,6 @@ body{
 
 }
 
-/*Carousel*/
-.d-block{
-    width: 25%;
-    margin: auto;
-    display: block;
-}
 
     
 
@@ -111,7 +75,7 @@ body{
 /* Botones*/
 .botones{
     
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+    background-image: linear-gradient(120deg, #848582 0%, #96e6a1 100%);
     padding: 5px;
     margin: auto;
     margin-top: 16px;
@@ -125,36 +89,8 @@ body{
 
 }
 
-/* Botones Componentes*/
-.botonescomp{
-    
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-    padding: 5px;
-    margin: auto;
-    margin-top: 16px;
-    margin-bottom: 12px;
-    display: block;
-    font-size: 16px;
-    text-align: center;
-    position: relative;
-    top: 700px;
-    border-radius: 8px;
-}
-/*Botones Memoria Ram*/
-.botonesm{
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-    padding: 5px;
-    margin: auto;
-    margin-top: 16px;
-    margin-bottom: 12px;
-    display: block;
-    font-size: 16px;
-    text-align: center;
-    position: relative;
-    top: 100px;
-    border-radius: 8px;
 
-}
+
 
 
 
@@ -166,7 +102,7 @@ body{
 /*TABLA DEL FOOTER*/
 
 table {
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    background-image: linear-gradient(120deg, #7570c0 0%, #8d8d8d 100%);
     width: 100%;
     border: 1px solid;
     
@@ -294,7 +230,7 @@ table img{
 }
 
 .container .card{
-    background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+    background-image: linear-gradient(to top, #b8b9c9 0%, #adadad 100%);
     width: 350px;
     height: 515px;
     border-radius: 8px;
