--- a/ServiExpress/templates/formulario.html
+++ b/ServiExpress/templates/formulario.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
     <link rel="stylesheet" href="{% static 'css/estilos.css'%}">
+    <link rel="stylesheet" href="{% static 'css/indexcss.css'%}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -66,7 +67,7 @@
 <body>
     <header>
         <h1>Contacto de Venta</h1>
-        <a href="Mipaginaweb.html"><img src="../images/logo.png" alt="Memoria Ram"/></a>
+        <a href="../"><img src="{% static 'images/Logo.png' %}" alt="Logo"></a>
         
 
 
@@ -106,33 +107,45 @@
 
     <article >
         
-        <a href="Mipaginaweb.html"><input class="botones" type="button" value="Atrás"></a>
-        <a href="Mipaginaweb.html"><input class="botones" type="button" value="Inicio"></a>
+        <a href="../"><input class="botones" type="button" value="Atrás"></a>
+        <a href="../"><input class="botones" type="button" value="Inicio"></a>
         
     </article>
 
+    <br><br><br><br><br>
 
-    <footer>
-        <table >
-            <tr class="text-center">
-              <th> &copy; Todos los Derechos reservados</th>
-              
-            </tr>
-            <tr class="text-center">
-                <th>Call Center: +56966463594</th>
-            </tr>
-            <tr class="text-center">
-                <th>Email: SetupC@gmail.com</th>
-            </tr>
-            <tr class="text-center">
-            
-              <td>  <a href="Mipaginaweb.html"><img src="../images/logo.png" alt="logopequeño"></td></a>
-              
-            </tr>
-            
-          </table>
+    <footer class="footer">
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
+        </div>
+        <ul class="social-icon">
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a></li>
+        </ul>
+        <ul class="menu">
+          <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
     
-    </footer>
+        </ul>
+        <p>&copy;2022 ServiExpress | All Rights Reserved</p>
+      </footer>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     
 </body>
 </html>
