--- a/ServiExpress/templates/index.html
+++ b/ServiExpress/templates/index.html
@@ -44,10 +44,10 @@
 
     <nav class="navMenu">
         <ul id="barra">
-            <li><a href="../">Inicio</a></li>
-            <li><a href="formulario">Cotización</a></li>
-            <li><a href="servicio">Servicios</a></li>
-            <li><a href="productos">Productos</a></li>
+            <li><a href="{% url 'inicio'%}">Inicio</a></li>
+            <li><a href="{% url 'formulario'%}">Cotización</a></li>
+            <li><a href="{% url 'servicio'%}">Servicios</a></li>
+            <li><a href="{% url 'productos'%}">Productos</a></li>
         </ul>
     </nav>
 
