--- a/ServiExpress/templates/formulario.html
+++ b/ServiExpress/templates/formulario.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="{% static 'css/estilos.css'%}">
     <link rel="stylesheet" href="{% static 'css/indexcss.css'%}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!--Boostrap Carrusel-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="text/javascript">
       $(document).ready(function(){
@@ -42,39 +42,29 @@
                   $("#error").show();
                   event.preventDefault();
               }
-
           });
-            
-
-
-
-
-
-
-
-
-
-
       })
-
-
   </script>
-
-    
-
-    
 </head>
 <body>
-    <header>
-        <h1>Contacto de Venta</h1>
-        <a href="../"><img src="{% static 'images/Logo.png' %}" alt="Logo"></a>
-        
 
-
+    <header class="bg-dark" id="headerLogo">
+      <img src="{% static 'images/Logo.png' %}" alt="Logo">
     </header>
 
+      <nav class="navMenu" style="margin-bottom:-3%;">
+        <ul id="barra">
+          <li><a href="{% url 'inicio'%}">Inicio</a></li>
+          <li><a href="{% url 'formulario'%}">Cotización</a></li>
+          <li><a href="{% url 'servicio'%}">Servicios</a></li>
+          <li><a href="{% url 'productos'%}">Productos</a></li>
+        </ul>
+    </nav>
+
+    <h1><div class="tittle">Contacto de venta</div></h1>
    
     <section class="formulario" id="formulario">
+        
         <form action="procesar.php" enctype="multipart/form-data" method="get" name="formulariocontacto">
         <h4>Formulario Cotización</h4>
         <input class="control" type="text"  name="Nombre" id="Nombre" placeholder="Ingrese su nombre">
@@ -104,13 +94,6 @@
 
         
     </section>
-
-    <article >
-        
-        <a href="../"><input class="botones" type="button" value="Atrás"></a>
-        <a href="../"><input class="botones" type="button" value="Inicio"></a>
-        
-    </article>
 
     <br><br><br><br><br>
 
