--- a/ServiExpress/templates/productos.html
+++ b/ServiExpress/templates/productos.html
@@ -17,128 +17,105 @@
     <!--Boostrap Footer-->
 </head>
 <body>
-    <header class="bg-dark" id="headerLogo">
-        <img src="{% static 'images/Logo.png' %}" alt="Logo">
-    </header>
-    <section>
-        <h1><div class="tittle">Productos con los que trabajamos</div></h1>
+  <header class="bg-dark" id="headerLogo">
+    <img src="{% static 'images/Logo.png' %}" alt="Logo">
+  </header>
+  <section>
+
+    <nav class="navMenu" style="margin-bottom:-3%;">
+      <ul id="barra">
+          <li><a href="{% url 'inicio'%}">Inicio</a></li>
+          <li><a href="{% url 'formulario'%}">Cotización</a></li>
+          <li><a href="{% url 'servicio'%}">Servicios</a></li>
+          <li><a href="{% url 'productos'%}">Productos</a></li>
+      </ul>
+    </nav>
+    
+    <h1><div class="tittle">Productos con los que trabajamos</div></h1>
        
-        <div class="container">
-            <div class="card">
-                <a href="#"><img src="{% static 'images/neumaticospro.png' %}" alt=""></a>
-                <h4>Neumaticos</h4>
-                <p></p>
-                    <a href="#">Ingresa aquí para ver los neumaticos disponibles</a>
-                
-                
-            </div>
- 
-            <div class="card">
-             <a href="#"><img src="{% static 'images/culata.png' %}" alt=""></a>
-             <h4>Culata</h4>
-             
-             <a href="#">Ingresa aquí para ver las culatas disponibles</a>
-             
-         </div>
+    <div class="container">
 
-         <div class="card">
-            <a href="#"><img src="{% static 'images/pistones.png' %}" alt=""></a>
-            <h4>Pistones</h4>
-            <p>
-                <a href="#">Ingresa aquí para ver los pistones/a>
-            
-        </div>
-        
+      <div class="card-deck">
+
         <div class="card">
-            <a href="#"><img src="{% static 'images/radiador.png' %}" alt=""></a>
-            <h4>Radiador</h4>
-            <p>
-                <a href="#">Ingresa aquí para ver los radiadores disponibles</a>
-            
+          <a href="#"><img src="{% static 'images/neumaticospro.png' %}" alt=""></a>
+          <h4>Neumaticos</h4>
+          <br>
+          <a href="#">Ingresa aquí para ver los neumaticos disponibles</a>         
+        </div>
+    
+        <div class="card">
+          <a href="#"><img src="{% static 'images/culata.png' %}" alt=""></a>
+          <h4>Culata</h4>
+          <br> 
+          <a href="#">Ingresa aquí para ver las culatas disponibles</a>           
         </div>
 
         <div class="card">
-            <a href="#"><img src="{% static 'images/Amortiguadores.png' %}" alt=""></a>
-            <h4>Amortiguadores</h4>
-            <p>
-                <a href="#">Ingresa aquí para ver los Amortiguadores disponibles</a>
-            
+          <a href="#"><img src="{% static 'images/pistones.png' %}" alt=""></a>
+          <h4>Pistones</h4>
+          <br>
+          <a href="#">Ingresa aquí para ver los pistones/a>
         </div>
-    </section>
 
+      </div>
+      
+      <div class="card-deck"  style="margin-top: 5%;">
 
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    
-    
+        <div class="card">
+          <a href="#"><img src="{% static 'images/radiador.png' %}" alt=""></a>
+          <h4>Radiador</h4>
+          <br>
+          <a href="#">Ingresa aquí para ver los radiadores disponibles</a>
+        </div>
 
-    
-    <article >
-        
-        <a href="../"><input class="botones" type="button" value="Atrás"></a>
-        <a href="../"><input class="botones" type="button" value="Inicio"></a>
-        
-    </article>
+        <div class="card">
+          <a href="#"><img src="{% static 'images/Amortiguadores.png' %}" alt=""></a>
+          <h4>Amortiguadores</h4>
+          <br>
+          <a href="#">Ingresa aquí para ver los Amortiguadores disponibles</a>
+        </div>
 
+      </div>
 
+    </div>
 
-    <br><br>
+  </section>
  
-    <footer class="footer">
-        <div class="waves">
-          <div class="wave" id="wave1"></div>
-          <div class="wave" id="wave2"></div>
-          <div class="wave" id="wave3"></div>
-          <div class="wave" id="wave4"></div>
-        </div>
-        <ul class="social-icon">
-          <li class="social-icon__item"><a class="social-icon__link" href="#">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a></li>
-          <li class="social-icon__item"><a class="social-icon__link" href="#">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a></li>
-          <li class="social-icon__item"><a class="social-icon__link" href="#">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a></li>
-          <li class="social-icon__item"><a class="social-icon__link" href="#">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a></li>
-        </ul>
-        <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
-    
-        </ul>
-        <p>&copy;2022 ServiExpress | All Rights Reserved</p>
-      </footer>
-      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <footer class="footer" style="margin-top: 30%;">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="#">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu">
+      <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>  
+    </ul>
+
+      <p>&copy;2022 ServiExpress | All Rights Reserved</p>
+
+    </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
